--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,15 +15,15 @@ import { cn } from '@/lib/utils'
     class="flex flex-col items-center justify-center gap-y-4 text-center"
   >
     <div class="max-w-md">
-      <h1 class="mb-4 text-3xl font-medium">404: Page not found</h1>
-      <p class="prose">Oops! The page you're looking for doesn't exist.</p>
+      <h1 class="mb-4 text-3xl font-medium">404 : Page Introuvable</h1>
+      <p class="prose">Oups ! La page que vous recherchez ne semble pas exister.</p>
     </div>
     <Link
       href="/"
       class={cn(buttonVariants({ variant: 'outline' }), 'flex gap-x-1.5 group')}
     >
       <span class="transition-transform group-hover:-translate-x-1">&larr;</span
-      > Go to home page
+      > Aller à l'accueil
     </Link>
   </section>
 </Layout>
