--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -9,12 +9,12 @@ const calloutConfig = {
     textColor: 'text-blue-700 dark:text-blue-300',
     icon: 'lucide:info',
   },
-  astuce: {
+  tip: {
     style: 'border-green-500 dark:bg-green-950/5',
     textColor: 'text-green-700 dark:text-green-300',
     icon: 'lucide:lightbulb',
   },
-  avertissement: {
+  warning: {
     style: 'border-amber-500 dark:bg-amber-950/5',
     textColor: 'text-amber-700 dark:text-amber-300',
     icon: 'lucide:alert-triangle',
@@ -29,12 +29,12 @@ const calloutConfig = {
     textColor: 'text-purple-700 dark:text-purple-300',
     icon: 'lucide:message-square-warning',
   },
-  définition: {
+  definition: {
     style: 'border-purple-500 dark:bg-purple-950/5',
     textColor: 'text-purple-700 dark:text-purple-300',
     icon: 'lucide:book-open',
   },
-  théorème: {
+  theorem: {
     style: 'border-teal-500 dark:bg-teal-950/5',
     textColor: 'text-teal-700 dark:text-teal-300',
     icon: 'lucide:check-circle',
@@ -44,12 +44,12 @@ const calloutConfig = {
     textColor: 'text-sky-700 dark:text-sky-300',
     icon: 'lucide:puzzle',
   },
-  preuve: {
+  proof: {
     style: 'border-gray-500 dark:bg-gray-950/5',
     textColor: 'text-gray-700 dark:text-gray-300',
     icon: 'lucide:check-square',
   },
-  corollaire: {
+  corollary: {
     style: 'border-cyan-500 dark:bg-cyan-950/5',
     textColor: 'text-cyan-700 dark:text-cyan-300',
     icon: 'lucide:git-branch',
@@ -64,7 +64,7 @@ const calloutConfig = {
     textColor: 'text-violet-700 dark:text-violet-300',
     icon: 'lucide:anchor',
   },
-  hypothèse: {
+  conjecture: {
     style: 'border-pink-500 dark:bg-pink-950/5',
     textColor: 'text-pink-700 dark:text-pink-300',
     icon: 'lucide:help-circle',
@@ -74,7 +74,7 @@ const calloutConfig = {
     textColor: 'text-slate-700 dark:text-slate-300',
     icon: 'lucide:pen-tool',
   },
-  remarque: {
+  remark: {
     style: 'border-gray-400 dark:bg-gray-950/5',
     textColor: 'text-gray-700 dark:text-gray-300',
     icon: 'lucide:message-circle',
@@ -84,32 +84,32 @@ const calloutConfig = {
     textColor: 'text-yellow-700 dark:text-yellow-300',
     icon: 'lucide:lightbulb',
   },
-  rappel: {
+  recall: {
     style: 'border-blue-300 dark:bg-blue-950/5',
     textColor: 'text-blue-600 dark:text-blue-300',
     icon: 'lucide:rotate-ccw',
   },
-  explication: {
+  explanation: {
     style: 'border-lime-500 dark:bg-lime-950/5',
     textColor: 'text-lime-700 dark:text-lime-300',
     icon: 'lucide:help-circle',
   },
-  exemple: {
+  example: {
     style: 'border-emerald-500 dark:bg-emerald-950/5',
     textColor: 'text-emerald-700 dark:text-emerald-300',
     icon: 'lucide:code',
   },
-  exercice: {
+  exercise: {
     style: 'border-indigo-500 dark:bg-indigo-950/5',
     textColor: 'text-indigo-700 dark:text-indigo-300',
     icon: 'lucide:dumbbell',
   },
-  problème: {
+  problem: {
     style: 'border-orange-600 dark:bg-orange-950/5',
     textColor: 'text-orange-700 dark:text-orange-300',
     icon: 'lucide:alert-circle',
   },
-  réponse: {
+  answer: {
     style: 'border-teal-500 dark:bg-teal-950/5',
     textColor: 'text-teal-700 dark:text-teal-300',
     icon: 'lucide:check',
@@ -119,7 +119,7 @@ const calloutConfig = {
     textColor: 'text-emerald-700 dark:text-emerald-300',
     icon: 'lucide:check-circle-2',
   },
-  résumé: {
+  summary: {
     style: 'border-sky-500 dark:bg-sky-950/5',
     textColor: 'text-sky-700 dark:text-sky-300',
     icon: 'lucide:list',
