--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -18,7 +18,7 @@ import { Icon } from 'astro-icon/components'
     name="lucide:moon"
     class="absolute size-4 scale-0 rotate-90 transition-all dark:scale-100 dark:rotate-0"
   />
-  <span class="sr-only">Toggle theme</span>
+  <span class="sr-only">Changer de thème</span>
 </Button>
 
 <script is:inline data-astro-rerun>
