--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -21,7 +21,7 @@ const authors = await getAllAuthors()
         ))}
       </ul>
     ) : (
-      <p class="text-muted-foreground text-center">No authors found.</p>
+      <p class="text-muted-foreground text-center">Pas d'auteurs trouvés.</p>
     )
   }
 </Layout>
