--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,11 +11,11 @@ import SocialIcons from './SocialIcons.astro'
   >
     <div class="flex flex-wrap items-center justify-center gap-x-2 text-center">
       <span class="text-muted-foreground text-sm">
-        &copy; {new Date().getFullYear()} All rights reserved.
+        &copy; {new Date().getFullYear()} Tous droits réservés.
       </span>
       <Separator orientation="vertical" className="hidden h-4! sm:block" />
       <p class="text-muted-foreground text-sm">
-        Made with 🤍 by <Link
+        Modèle Astro par <Link
           href="https://github.com/jktrn"
           class="text-foreground"
           external
