--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,14 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
   <section>
     <div class="rounded-lg border">
       <div class="flex flex-col space-y-1.5 p-6">
-        <h3 class="text-3xl leading-none font-medium">er·u·dite</h3>
-        <p class="text-muted-foreground text-sm">
+        <h3 class="text-3xl leading-none font-medium">ttheblog</h3>
+        <!-- <p class="text-muted-foreground text-sm">
           /ˈer(y)əˌdīt/ &bull; <span class="font-medium">adjective</span>
-        </p>
+        </p> -->
       </div>
       <div class="p-6 pt-0">
-        <p class="text-muted-foreground mb-2 text-sm">
+        <img src="avions.png" alt="Un oiseau assis sur un nid d'œufs.">
+        <!-- <p class="text-muted-foreground mb-2 text-sm">
           astro-erudite is an opinionated, unstyled static blogging template
           built with <Link
             href="https://astro.build"
@@ -57,7 +58,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
             class="text-foreground"
             underline>The State of Static Blogs in 2024</Link
           >.
-        </p>
+        </p> -->
       </div>
     </div>
   </section>
